 * Fixed a problem with iTunes 10.6.3 on Mac OS X 10.6.8 causing the chat window's toolbar to break. (#16046)
 * Fixed an issue that caused logging in to Facebook to fail when login approvals are enabled. (#15705)
 * Icons set for group chat bookmarks will now show up on the tab bar in the chat window. (Andreas Marienborg) (#14484)
 * Improved memory use slightly.

Version 1.5.2 (7/21/2012)
 * Fixed an issue where the log indexer would never finish.
 * Fixed a number of crashes that could occur after closing the Transcript Viewer. (#15984, #15823)
 * Fixed crash at startup. (#15787)
 * Fixed crash upon cancelling the "Confirm quit" window. (#15900)
 * Fixed crash when closing the Novell Groupwise account options. (#16041)
 * Fixed a problem on retina Macbook Pros causing Adium to send too large user icons to the server, causing disconnects. (#16063)
 * Updated the Ukrainian localisation. (#16062)


Version 1.5.1 (6/7/2012)
  * Adium is now securely signed with an Apple Developer ID for OS X 10.8 / GateKeeper compatibility.
  * Updated to libpurple 2.10.4
    * AIM/ICQ: Fixed communication with buddies containing periods and underscores.
    * MSN: Fixed messages to offline contacts.
    * MSN: Switched to MSN protocol version 18, therefore re-enabling Multiple Points of Presence support.
    * Fixed a number of security issues (see http://pidgin.im/news/security/), small memory leaks, miscellaneous bugs.
  * Fixed MSN public display names not being set. (Chenguang Li) (#15915)
  * Adjusted the minimum size of the message window to be 200px. (#15794)
  * Fixed status indicators in chat windows with only one chat. (#9620)
  * Increased the size of the focus indicators so that they can be better seen when using overlay scrollbars.
  * Fixed the transcript viewer not saving the user list size.
  * Corrected some MSN emoticon shortcuts. (Paul Wilde) (#15926)
  * Renamed "Send Notification" to "Request Attention". (#15789)